2017-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2684.c:
	  Test for bug #2684.

2017-11-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix a bug in Z80 sfr handling.
	* support/scripts/Makefile.in:
	  Fix an access rights issue in make install, patch by Felix Salfelder.

2017-10-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix --reserve-regs-iy issues, part of bug #2674.
	* device/lib/incl.mk:
	  Build library for mcs51 huge model, to reduce differences with Debian version.

2017-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2580.c:
	  Fix an issue for host systems where char is signed.
	* support/regression/ports/ucz80-resiy,
	  support/regression/Makefile.in:
	  Add target for z80 test with --reserve-regs-iy.
	* doc/Makefile.in:
	  Try to resurrect full documentation build.

2017-10-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pic16/configure,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/supported-devices.ac:
	  Reduce pic device support warning timeout.
	* support/regression/tests/gcc-torture-execute-920612-1.c:
	  Disable a host test that fails for GCC 7.2.
	* src/z80/gen.c,
	  support/regression/tests/bug-2580.c:
	  Fix bug #2580.

2017-10-27 Philipp Klaus Krause <pkk AT spth.de>

	* configure,
	  configure.ac,
	  sim/ucsim/cmd.src/cmdutil.cc,
	  sim/ucsim/configure,
	  sim/ucsim/configure.ac,
	  sim/ucsim/utils.cc,
	  src/SDCCutil.c,
	  src/SDCCutil.h:
	  Do not work around missing C99 support.
	* support/regression/Makefile.in:
	  Reduce make overhead in regression testing from quadratic to linear in the number of tests.
	* sim/ucsim/app.cc:
	  Speed up simulator command handling for faster regression testing.

2017-10-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  support/regression/tests/bug-2370.c:
	  Fix various --reserve-regs-iy issues, including bug #2370 and most of bug #2674.